--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,7 +23,7 @@ phases:
      commands:
        - echo "Enter post_build"
        - echo build start on  `date`
-       - docker push 871724687805.dkr.ecr.ap-south-1.amazonaws.com/node:latest
+       - docker push 871724687805.dkr.ecr.ap-northeast-3.amazonaws.com/node:latest
        - echo Writing image definition file..
        - printf '[{"name":"projectk","imageUri":"871724687805.dkr.ecr.ap-northeast-3.amazonaws.com/node:latest"}]' > imagedefinitions.json
 artifacts:
